hphp/test/zend/bad/Zend/tests/generators/unused_return_value.php
<?php

function gen($foo) { yield; }

gen('foo'); // return value not used

?>
===DONE===